--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "@types/d3": "^5.7.2",
+    "@types/express": "^4.17.2",
     "@types/lodash": "^4.14.149",
     "@types/mustache": "^0.8.32",
+    "@types/mustache-express": "^1.2.1",
     "csvtojson": "2.0.10",
     "d3": "^5.14.2",
+    "express": "^4.17.1",
     "jsdom": "^15.2.1",
     "lodash": "^4.17.15",
-    "mustache": "^3.1.0"
+    "mustache": "^3.1.0",
+    "mustache-express": "^1.3.0"
   },
   "devDependencies": {
     "@types/csvtojson": "^1.1.5",
